--- a/s4e-web/src/scss/_timeline.scss
+++ b/s4e-web/src/scss/_timeline.scss
@@ -24,12 +24,8 @@
   left: 440px;
   padding: 0 50px 30px 50px;
   margin: 0 -50px 0 -50px;
-  background: rgb(31, 31, 31);
-  background: linear-gradient(
-    0deg,
-    rgba(31, 31, 31, 0.8043418050814075) 0%,
-    rgba(255, 255, 255, 0) 55%
-  );
+  background: rgb(31,31,31);
+  background: linear-gradient(0deg, rgba(31,31,31,0.8043418050814075) 0%, rgba(255,255,255,0) 55%);
   box-sizing: border-box;
 
   &.closed {
@@ -37,6 +33,7 @@
     left: 0;
     margin: 0;
   }
+
 
   &__manager {
     margin-bottom: 20px;
@@ -57,11 +54,11 @@
         padding-left: 10px;
         padding-right: 10px;
 
-        input[type='checkbox'] {
+        input[type="checkbox"] {
           display: none;
         }
 
-        label[for='live'] {
+        label[for="live"] {
           cursor: pointer;
           display: flex;
         }
@@ -99,6 +96,7 @@
           }
         }
       } /* live button end */
+
 
       span {
         margin: 0 5px;
@@ -142,7 +140,7 @@
 
           &:after {
             background: $color-black;
-            content: ' ';
+            content: " ";
             position: absolute;
             width: 12px;
             height: 1px;
@@ -159,7 +157,7 @@
           &:after,
           &:before {
             background: $color-black;
-            content: ' ';
+            content: " ";
             position: absolute;
             width: 12px;
             height: 1px;
@@ -193,7 +191,10 @@
         }
       }
     }
+
+
   } /* timeline__manager */
+
 
   &__grid {
     position: relative;
@@ -202,7 +203,7 @@
     justify-content: space-between;
 
     &:before {
-      content: ' ';
+      content: " ";
       height: 2px;
       border-radius: $border-radius-circle;
       background-color: $color-white;
@@ -212,7 +213,7 @@
       left: 0;
       top: 4px;
       z-index: 1;
-      filter: drop-shadow(0px 0px 13px rgba(0, 0, 0, 0.41));
+      filter: drop-shadow(0px 0px 13px rgba(0,0,0,0.41));
     }
   }
 
@@ -225,7 +226,7 @@
     border-radius: $border-radius-circle;
     background-color: $color-white;
     cursor: pointer;
-    filter: drop-shadow(0px 0px 13px rgba(0, 0, 0, 0.41));
+    filter: drop-shadow(0px 0px 13px rgba(0,0,0,0.41));
     transition: 0.4s;
 
     &.active {
@@ -260,8 +261,7 @@
     &--multiple {
       left: 150px;
 
-      &:hover,
-      &.active {
+      &:hover, &.active {
         margin: 0 !important;
         width: 10px !important;
         height: 10px !important;
@@ -277,6 +277,7 @@
       }
 
       .multiple {
+
         &__dot {
           position: absolute;
           border-radius: $border-radius-circle;
@@ -315,6 +316,11 @@
             margin: 2px 0 8px 0;
           }
 
+          ul {
+            overflow-x: auto;
+            max-height: 50vh;
+          }
+
           li {
             padding: 5px;
             background-color: $color-white;
@@ -328,6 +334,11 @@
               border: 1px solid $color-grey-quaternary;
               padding: 4px;
             }
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+
           }
 
           &:after {
@@ -337,7 +348,7 @@
             border-bottom: 10px solid transparent;
             border-left: 10px solid transparent;
             border-right: 10px solid transparent;
-            content: '';
+            content: "";
             position: absolute;
             bottom: -20px;
             border-radius: 2px;
@@ -346,6 +357,7 @@
         }
       }
     }
+
   } /* timeline__item */
 
   &__hourmark {
